force-app/main/default/objects/Student_Bulk_Upload__c/Student_Bulk_Upload__c.object-meta.xml
<CustomObject>
    <label>Student Bulk Upload</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Student Bulk Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Bulk Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>