force-app/main/default/objects/Student_Bulk_Upload__c/fields/Appinium_Class_ID__c.field-meta.xml
<CustomField>
    <fullName>Appinium_Class_ID__c</fullName>
    <label>Appinium Class ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>