force-app/main/default/objects/Student_Bulk_Upload__c/fields/ILT_Class__c.field-meta.xml
<CustomField>
    <fullName>ILT_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ILT Class</label>
    <referenceTo>redwing__ILT_Class__c</referenceTo>
    <relationshipLabel>Student Bulk Uploads</relationshipLabel>
    <relationshipName>Student_Bulk_Uploads</relationshipName>
    <type>Lookup</type>
</CustomField>