force-app/main/default/objects/Student_Bulk_Upload__c/fields/ILT_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>ILT_Class_Id__c</fullName>
    <formula>ILT_Class__r.Id</formula>
    <label>ILT Class Id</label>
    <type>Text</type>
</CustomField>