force-app/main/default/objects/Student_Bulk_Upload__c/fields/Learning__c.field-meta.xml
<CustomField>
    <fullName>Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Student Bulk Uploads</relationshipLabel>
    <relationshipName>Student_Bulk_Uploads</relationshipName>
    <type>Lookup</type>
</CustomField>