force-app/main/default/objects/Student_Bulk_Upload__c/fields/Saba_Class_ID__c.field-meta.xml
<CustomField>
    <fullName>Saba_Class_ID__c</fullName>
    <label>Saba Class ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>