force-app/main/default/objects/Student_Bulk_Upload__c/fields/Student_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Student_Email_Address__c</fullName>
    <label>Student Email Address</label>
    <type>Email</type>
</CustomField>