force-app/main/default/objects/Student_Bulk_Upload__c/fields/Student_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_First_Name__c</fullName>
    <label>Student First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>