force-app/main/default/objects/Student_Bulk_Upload__c/fields/Student_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Phone_Number__c</fullName>
    <label>Student Phone Number</label>
    <type>Phone</type>
</CustomField>