force-app/main/default/objects/Student_Bulk_Upload__c/fields/Voucher__c.field-meta.xml
<CustomField>
    <fullName>Voucher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher</label>
    <referenceTo>Voucher__c</referenceTo>
    <relationshipLabel>Student Bulk Uploads</relationshipLabel>
    <relationshipName>Student_Bulk_Uploads</relationshipName>
    <type>Lookup</type>
</CustomField>