force-app/main/default/objects/Student_Bulk_Upload__c/fields/Voucher_Id__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Id__c</fullName>
    <formula>Voucher__r.Id</formula>
    <label>Voucher Id</label>
    <type>Text</type>
</CustomField>