force-app/main/default/objects/Student_Bulk_Upload__c/fields/Voucher_Status__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Status__c</fullName>
    <formula>TEXT(Voucher__r.Status__c)</formula>
    <label>Voucher Status</label>
    <type>Text</type>
</CustomField>